[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "My fiest package"
authors = ["Julio Martinez del Pino <juliomdp92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.*"

[tool.poetry.dev-dependencies]
coverage = { extras = ["toml"], version = "7.2.*" }
black = { version = "23.7.*", allow-prereleases = true }
pytest = "7.4.*"
pytest-html = "3.2.*"
pytest-cov = "4.1.*"
pylint = "2.17.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
